@@ -80,6 +80,7 @@
 		<xs:complexType>
 			<xs:sequence minOccurs="1">
 				<xs:element ref="url" minOccurs="0" maxOccurs="1" />
+				<xs:element ref="short" minOccurs="0" maxOccurs="1" />
 				<xs:element ref="antipattern" minOccurs="0" maxOccurs="unbounded"/>
 				<xs:element ref="rule" maxOccurs="unbounded" />
 			</xs:sequence>
