@@ -146,6 +146,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
         </rule>
         <rulegroup id="GROUP_WITH_URL" name="rule group with url">
             <url>http://fake-server.org/rule-group-url</url>
+            <short>short message on rule group</short>
             <rule>
                 <pattern>
                     <token>fake1</token>
@@ -160,6 +161,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
                 </pattern>
                 <message>msg2</message>
                 <url>http://fake-server.org/rule-group-url-overwrite</url>
+                <short>overwriting short message</short>
                 <example type="incorrect"><marker>fake1</marker></example>
                 <example type="correct">fake2</example>
             </rule>
