@@ -418,6 +418,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
             <example type="correct">Etwas 16 mal 10 nehmen.</example>
         </rule>
         <rulegroup id="AUFFUEHREN_AUSFUEHREN" name="Möglicher Tippfehler: 'aufführen (ausführen)' etc.">
+            <short>Möglicher Tippfehler</short>
             <rule>
                 <pattern case_sensitive="yes">
                     <token skip="1" regexp="yes">Aktion(en)?|Befehle?n?|Anwendung(en)?</token>
@@ -426,7 +427,6 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
                     </marker>
                 </pattern>
                 <message>Meinten Sie <suggestion><match case_conversion="alllower" no="2" regexp_match="auf" regexp_replace="aus"/></suggestion>?</message>
-                <short>Möglicher Tippfehler</short>
                 <example type="incorrect" correction="ausgeführt">Vor dem Ausführen jeder Aktion wird geprüft, ob diese Aktion <marker>aufgeführt</marker> werden darf.</example>
                 <example type="correct">Vor dem Ausführen jeder Aktion wird geprüft, ob diese Aktion <marker>ausgeführt</marker> werden darf.</example>
             </rule>
@@ -438,7 +438,6 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301, USA
                     <token regexp="yes">Aktion(en)?|Befehle?n?|Anwendung(en)?</token>
                 </pattern>
                 <message>Meinten Sie <suggestion><match case_conversion="startupper" no="1" regexp_match="Auf" regexp_replace="Aus"/></suggestion>?</message>
-                <short>Möglicher Tippfehler</short>
                 <example type="incorrect" correction="Ausführen">Das <marker>Aufführen</marker> großer Anwendungen benötigt viel Arbeitsspeicher.</example>
                 <example type="correct">Das <marker>Ausführen</marker> großer Anwendungen benötigt viel Arbeitsspeicher.</example>
             </rule>
