@@ -18,6 +18,10 @@ LanguageTool Change Log
 -Russian:
     -added/improved several rules
 
+-Rule Syntax:
+    -<short>...</short> can now be added to a rulegroup to affect all the rules
+     of that group
+
 -API:
     -removed classes and methods that had been deprecated since 2.7 or longer
 
